# docs/swagger.yaml
@@ -149,6 +149,49 @@ paths:
       summary: Obtiene un historico específico
       tags:
       - AvlRecords
+  /avlrecords/excel/:
+    get:
+      consumes:
+      - application/json
+      description: Recupera todos los puntos de registros Avl con opciones de paginación
+        y filtrado por FkCompany y FkCustomer si están presentes en el contexto.
+      parameters:
+      - description: Placa del vehículo
+        in: query
+        name: Plate
+        type: string
+      - description: Imei del dispositivo
+        in: query
+        name: Imei
+        type: string
+      - description: Fecha de inicio para filtrar los registros Avl
+        in: query
+        name: fromDate
+        type: string
+      - description: Fecha de fin para filtrar los registros Avl
+        in: query
+        name: toDate
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Lista de puntos de registros Avl
+          schema:
+            items:
+              $ref: '#/definitions/swagger.AvlRecordPoint'
+            type: array
+        "500":
+          description: Internal Server Error
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+      security:
+      - ApiKeyAuth: []
+      summary: Obtiene todos los puntos de registros Avl
+      tags:
+      - AvlRecords
   /tours/:
     get:
       consumes:
